--- a/reference/API_spotlight.v1.yaml
+++ b/reference/API_spotlight.v1.yaml
@@ -17,13 +17,7 @@ paths:
       description: Create a new user
       security:
         - API Key - 1: []
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: password
-          description: ''
-          required: true
+      parameters: []
   /login:
     get:
       summary: Your GET endpoint
