--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.1.3",
     "multer": "^1.4.2",
-    "node": "^14.12.0"
+    "node": "^14.12.0",
+    "uuidv4": "^6.2.4"
   }
 }
